--- a/Face recognition_MeghaRRao.ipynb
+++ b/Face recognition_MeghaRRao.ipynb
@@ -536,10 +536,10 @@
     }
    ],
    "source": [
+    "# Plot the confusion matrix"
     "pl.gray()\n",
     "_ = pl.imshow(cm, interpolation='nearest')\n",
-    "# Plotting the confusion matrix"
-   ]
+       ]
   }
  ],
  "metadata": {
